<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/PaddingHorizontal">


    <TextView
        android:id="@+id/TextViewMerka"
        android:layout_width="match_parent"
        android:layout_height="@dimen/HeightLogoMerka"
        android:layout_marginBottom="@dimen/MarginGrandeEntreElementos"
        android:background="@drawable/logo_background"
        android:gravity="center"
        android:text="@string/app_name"
        android:textAppearance="@style/textAppearance_Merka"
        android:textSize="@dimen/TextSizeLogoMerka"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/TextViewHintNome"
        android:ems="10"
        android:hint="@string/TextViewHintNome"
        android:inputType="textPersonName"
        android:textSize="@dimen/HintCadastro"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/TextViewHintEmail"
        android:ems="10"
        android:hint="@string/TextViewHintEmail"
        android:inputType="textEmailAddress"
        android:textSize="@dimen/HintCadastro"
        android:textStyle="bold" />
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/editNovaTextSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@+id/editTextNovaSenha"
            android:ems="10"
            android:hint="@string/TextViewHintSenha"
            android:inputType="textPassword"
            android:textSize="@dimen/HintCadastro"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/editTextConfirmaSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/MarginGrandeEntreElementos"
            android:autofillHints="@string/TextViewHintConfirmaSenha"
            android:ems="10"
            android:hint="@string/TextViewHintConfirmaSenha"
            android:inputType="textPassword"
            android:textSize="@dimen/HintCadastro"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonCriarConta"
        android:layout_width="match_parent"
        android:layout_height="@dimen/heightBtn"
        android:layout_marginBottom="@dimen/MarginGrandeEntreElementos"
        android:background="@drawable/btn_login_registro_background"
        android:text="@string/ButtonTextCriarConta"
        android:textAppearance="@style/textAppearance_WhiteTextBtn" />

    <View
        android:id="@+id/LinhaHorizontal"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginBottom="@dimen/MarginGrandeEntreElementos"
        android:background="@color/design_default_color_on_secondary"
        android:focusable="false" />

    <TextView
        android:id="@+id/textViewJaPossuiConta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/MarginEntreElementos"
        android:text="@string/TextViewTextJaPossuiConta"
        android:textColor="@android:color/background_dark"
        android:textSize="@dimen/TextSizeJaPossuiUmaConta" />

    <Button
        android:id="@+id/buttonIrParaLogin"
        android:layout_width="match_parent"
        android:layout_height="@dimen/heightBtn"
        android:background="@drawable/btn_login_registro_background"
        android:text="@string/ButtonTextEntrar"
        android:textAppearance="@style/textAppearance_WhiteTextBtn" />

</LinearLayout>