<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PerfilLoja">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/perfilLojaImage"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/store_icon"
            app:civ_border_color="#FF000000"
            app:civ_border_width="2dp" />

        <TextView
            android:id="@+id/textViewNomeLoja"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/MarginEntreElementos"
            android:text="@string/TextViewTextNomeDaLoja"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TextViewTextIndicaNome"
                android:textColor="#8F8F8F"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TextViewTextIndicaContato"
                android:textColor="#8F8F8F"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txtPerfilContatoLoja"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/TextViewTextIndicaContato"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/TextViewTextIndicaEndereço"
                android:textColor="#8F8F8F"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txtPerfilEnderecoLoja"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/TextViewHintEndereco"
                android:textSize="20sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/TextViewTextIndicaDescrição"
            android:textColor="#8F8F8F"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txtPerfilDescricaoLoja"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/TextViewHintEndereco"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TextViewTextIndicaDelivery"
                android:textColor="#8F8F8F"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txtPerfilDeliveryLoja"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="20dp"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView2"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/buttonEditarLoja"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/MarginGrandeEntreElementos"
            android:background="@drawable/input_simple_background"
            android:text="@string/ButtonTextEditarLoja" />
    </LinearLayout>


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewHomePerfil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/TextViewTextHome"
                android:textStyle="bold"
                app:drawableTopCompat="@drawable/ic_home" />

            <TextView
                android:id="@+id/textViewBuscaPerfil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/TextViewTextBusca"
                android:textStyle="bold"
                app:drawableTopCompat="@drawable/ic_busca" />

            <TextView
                android:id="@+id/textViewLojaPerfil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/TextViewTextLoja"
                android:textStyle="bold"
                app:drawableTopCompat="@drawable/ic_loja" />

            <TextView
                android:id="@+id/textViewPerfilPerfil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/TextViewTextPerfil"
                android:textStyle="bold"
                app:drawableTopCompat="@drawable/ic_person" />


        </LinearLayout>
    </com.google.android.material.bottomnavigation.BottomNavigationView>

</androidx.constraintlayout.widget.ConstraintLayout>