<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/PaddingLayout"
    tools:context=".activity.AdicionaProduto">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/picProduto"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/MarginGrandeEntreElementos"
        android:src="@drawable/produto_icon"
        app:civ_border_color="#FF000000"
        app:civ_border_width="2dp" />

    <EditText
        android:id="@+id/txtEditNomeProduto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/TextViewHintNome"
        android:hint="@string/TextViewHintNome"
        android:inputType="textPersonName"
        android:maxLength="16"
        android:textSize="@dimen/HintCadastroLojasPequenos" />

    <EditText
        android:id="@+id/txtEditValorProduto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/TextViewHintValor"
        android:hint="@string/TextViewHintValor"
        android:inputType="numberDecimal"
        android:maxLength="8"
        android:textSize="@dimen/HintCadastroLojasPequenos" />

    <EditText
        android:id="@+id/txtEditDescricaoProduto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/TextViewHintDescricao"
        android:hint="@string/TextViewHintDescricao"
        android:inputType="text"
        android:maxLength="50"
        android:textSize="@dimen/HintCadastroLojasPequenos" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/MarginEntreElementos"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnConfirmarEditProduto"
            style="?attr/buttonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:background="@drawable/background_button_white_border_red"
            android:text="@string/ButtonTextConfirmar" />

        <Button
            android:id="@+id/btnCancelarEditProduto"
            style="?attr/buttonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:background="@drawable/background_button_white_border_red"
            android:text="@string/ButtonTextCancelar" />
    </LinearLayout>

</LinearLayout>